@@ -6,6 +6,8 @@ New features:
 A.F.I..PS. [ZBX-7720] increased size of "Host name", "Visible host name" and "Proxy name" fields to 128 characters (Sasha)
 
 Bug fixes:
+.......PS. [ZBX-8338] fixed SNMP walking code so that it intelligently chooses either a string or numeric representation for an OID index (asaveljevs)
+..F....... [ZBX-8577] added wmi.get[] to the list of suggested items (asaveljevs)
 A......... [ZBX-8430] fixed SQL errors in drule.delete API method (Andrejs)
 A.F....... [ZBX-8510] fixed possible deadlocks when updating IT services (Pavels, Sasha)
 
@@ -293,6 +295,7 @@ A.......S. [ZBX-8473] improved performance of deleting triggers by API and serve
 A.F....... [ZBX-1357] updated Polish and Spanish translations; thanks to Zabbix translators (Richlv)
 
 Bug fixes:
+.......PS. [ZBX-8338] fixed SNMP walking code so that it intelligently chooses either a string or numeric representation for an OID index (asaveljevs)
 ..F....... [ZBX-8577] added wmi.get[] to the list of suggested items (asaveljevs)
 ..F....... [ZBX-8216] fixed screen import error (Andrejs)
 A.F....... [ZBX-8510] fixed possible deadlocks when updating IT services (Pavels, Sasha)
